--- a/assets/css/miniPopups.css
+++ b/assets/css/miniPopups.css
@@ -50,3 +50,32 @@
     width: 266px;
     height: 28px;
 }
+
+/*header pop-up*/
+
+.header_popup_logout {
+    padding: 10px;
+    width: 117px;
+    height: 39px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 20px 0px 20px 20px;
+    position: absolute;
+    z-index: 6;
+    top: 132px;
+    right: 38px;
+    cursor: pointer;
+}
+
+.header_popup {
+    padding: 8px;
+    gap: 20px;
+    display: none;
+    width: 107px;
+    height: 29px;
+}
+
+.header_logout_text {
+    font-size: 19px;
+    color: #4589FF;
+}
