--- a/assets/css/summary.css
+++ b/assets/css/summary.css
@@ -3,6 +3,11 @@
     height: -webkit-fill-available;
 }
 
+.summary_background {
+    background: #D2E3FF;
+    border-radius: 8px;
+}
+
 /*Summary welcome user*/
 .summary_general_cont {
     padding-left: 232px;
@@ -265,3 +270,4 @@
     font-size: 28px;
     color: #FFFFFF;
 }
+
