--- a/assets/templates/menu.html
+++ b/assets/templates/menu.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,25 +10,31 @@
         href="https://fonts.googleapis.com/css?family=Open+Sans:300,regular,500,600,700,800,300italic,italic,500italic,600italic,700italic,800italic"
         rel="stylesheet" />
 
+    <script src="assets/js/script.js"></script>
+    <script src="assets/js/login-signup.js"></script>
+    <script src="assets/js/summary.js"></script>
+    
+    <link rel="stylesheet" href="assets/css/login-signup.css">
     <link rel="stylesheet" href="assets/css/models.css">
     <link rel="stylesheet" href="assets/css/menu.css">
 </head>
+
 <body>
     <div class="menu_principal column-center">
         <div class="menu_links column-center-flexstart">
-            <div class="menu_all row-center background_blue">
+            <div class="menu_all summary_background row-center" onclick="openSummary()">
                 <img class="icon_summary" src="assets/img/iconSummary.svg">
                 <a class="text_menu font400">Summary</a>
             </div>
-            <div class="menu_all row-center ">
-                <img class="icon_board" src="assets/img/iconBoard.svg" >
+            <div class="menu_all row-center board_background" onclick="openBoard()">
+                <img class="icon_board" src="assets/img/iconBoard.svg">
                 <a class="text_menu font400">Board</a>
             </div>
-            <div class="menu_all row-center ">
+            <div class="menu_all row-center addTask_background" onclick="openAddTask()">
                 <img class="icon_addTask" src="assets/img/iconAddTask.svg">
                 <a class="text_menu font400">Add Task</a>
             </div>
-            <div class="menu_all row-center ">
+            <div class="menu_all row-center contacts_background" onclick="openContacts()">
                 <img class="icon_contacts" src="assets/img/iconContacts.svg">
                 <a class="text_menu font400">Contacts</a>
             </div>
@@ -40,4 +47,5 @@
         </div>
     </div>
 </body>
+
 </html>
