--- a/assets/templates/menu.html
+++ b/assets/templates/menu.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <div class="menu_principal column-center">
+    <div class="menu_principal column-center menu_large">
         <div class="menu_links column-center-flexstart">
             <div class="menu_all summary_background row-center" onclick="openSummary()">
                 <img class="icon_summary" src="assets/img/iconSummary.svg">
