--- a/assets/css/miniPopups.css
+++ b/assets/css/miniPopups.css
@@ -79,3 +79,129 @@
     font-size: 19px;
     color: #4589FF;
 }
+
+/* Add Task Pop-up */
+
+.add_task_popUp_container {
+    z-index: 9;
+    position: absolute;
+    right: -600px;
+    width: 518px;
+    height: 1024px;
+    overflow-y: scroll;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.16);
+    border-radius: 30px 0px 30px 30px;
+}
+
+.add_task_popUp_cont {
+    padding-top: 60px;
+    left: 36px;
+    gap: 20px;
+    position: absolute;
+    width: 561px;
+    height: 1056px;
+}
+
+.add_task_popUp_close {
+    position: absolute;
+    width: 21.65px;
+    height: 21.65px;
+    left: 433.31px;
+    top: 16px;
+    cursor: pointer;
+}
+
+.add_task_popUp_head {
+    gap: 49px;
+    width: 446px;
+    height: 61px;
+    left: 36px;
+}
+
+.add_task_popUp_title {
+    gap: 1px;
+    width: 217px;
+    height: 58px;
+}
+
+.add_task_popUp_Title {
+    font-weight: 700 !important;
+    font-size: 48px;
+    color: #000000;
+}
+
+.add_task_popUp_button_create {
+    padding: 18px 10px;
+    gap: 10px;
+    width: 180px;
+    height: 61px;
+    background: #4589FF;
+    border-radius: 10px;
+    border: none;
+}
+
+.add_task_button_create {
+    font-size: 23px;
+    line-height: 120%;
+    color: #FFFFFF;
+}
+
+.add_task_crate_check {
+    width: 24px;
+    height: 24px;
+}
+
+.slide_left {
+    transform:
+        translateX(-600px);
+    transition-duration: 0.3s;
+    animation-name: slide-left;
+}
+
+.slide_right {
+    transform:
+        translateX(0px);
+    transition-duration: 0.3s;
+    animation-name: slide-left;
+}
+
+/* Pop-up task added to board */
+
+.pop_up_task_added {
+    gap: 20px;
+    width: 326px;
+    height: 74px;
+    background: #4589FF;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 20px;
+}
+
+.pop_up_task_added_text {
+    width: 221px;
+    height: 28px;
+    font-size: 23px;
+    color: #FFFFFF;
+}
+
+.pop_up_task_added_img {
+    width: 22px;
+    height: 26px;
+}
+
+/* Pop-up contact created */
+
+.pop_up_contact_created {
+    width: 326px;
+    height: 74px;
+    background: #4589FF;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 20px;
+}
+
+.pop_up_contact_created_text {
+    width: 292px;
+    height: 28px;
+    font-size: 23px;
+    color: #FFFFFF;
+}
