--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -7,7 +7,7 @@
         </div>
         <div class="header_title_user row-center">
             <a class="header_kanban font400">Kanban Project Management Tool</a>
-            <img class="header_help" src="assets/img/help.svg">
+            <img class="header_help" src="assets/img/help.svg" onclick="openHelp()">
             <div class="header_circle" onclick="userLogOut()">
                 <span class="header_user_circle center-center">
                     <img class="header_user_foto" src="assets/img/user_foto.svg">
