--- a/assets/templates/menu.html
+++ b/assets/templates/menu.html
@@ -40,7 +40,7 @@
             </div>
         </div>
         <div class="menu_legal">
-            <div class="menu_legal_cont row-center">
+            <div class="menu_legal_cont row-center" onclick="openlegal()">
                 <img class="menu_legal_icon" src="assets/img/iconLegal.svg">
                 <a class="menu_legal_text font400">Legal notice</a>
             </div>
