--- a/assets/css/board.css
+++ b/assets/css/board.css
@@ -103,7 +103,7 @@ body {
 
 .board_column_tasks {
     gap: 35px;
-    width: 230px;
+    width: 250px;
     height: 30px;
 }
 
@@ -119,4 +119,130 @@ body {
     width: 30px;
     height: 30px;
     cursor: pointer;
+}
+
+.board_columns_container {
+    gap: 26px;
+    position: absolute;
+    width: 1078px;
+    left: 299px;
+    top: 283px;
+}
+
+.board_columns_column {
+    gap: 35px;
+    width: 250px;
+}
+
+.minitask_container {
+    padding: 18px 19px;
+    gap: 10px;
+    width: 210px;
+    height: 205px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.08);
+    border-radius: 30px;
+}
+
+.minitask {
+    gap: 20px;
+    width: 213px;
+    height: 205px;
+}
+
+.minitask_title_cont {
+    padding: 4px 25px;
+    gap: 10px;
+    width: fit-content;
+    height: 27px;
+    background: #FF7A00;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.minitask_title {
+    height: 19px;
+    font-size: 16px;
+    color: #FFFFFF;
+}
+
+.minitask_description_cont {
+    gap: 20px;
+    width: 207px;
+    height: 67px;
+}
+
+.minitask_descr_title {
+    width: 200px;
+    height: 19px;
+    font-weight: 700 !important;
+    font-size: 16px;
+    color: #4589FF;
+}
+
+.minitask_descr_text {
+    width: 207px;
+    height: 38px;
+    font-size: 16px;
+    color: #A8A8A8;
+}
+
+.minitask_subtask {
+    gap: 20px;
+    width: 213px;
+    height: 16px;
+}
+
+.minitask_sub_bar {
+    width: 138px;
+    height: 8px;
+    background: #F4F4F4;
+    border-radius: 2px;
+}
+
+.minitask_sub_text {
+    width: 58px;
+    height: 16px;
+    font-size: 13px;
+    color: #000000;
+}
+
+.minitask_buttom_cont {
+    gap: 83px;
+    width: 207px;
+    height: 35px;
+}
+
+.minitask_contacts_cont {
+    width: 150px;
+    height: 35px;
+}
+
+.minitask_prio_cont {
+    gap: 10px;
+    width: 32px;
+    height: 32px
+}
+
+.minitask_contact {
+    gap: 10px;
+    width: 35px;
+    height: 35px;
+    background: #0190E0;
+    border: 1px solid #FFFFFF;
+    border-radius: 58px;
+}
+
+.minitask_contact_text {
+    width: 19px;
+    height: 14px;
+    font-size: 12px;
+    color: #FFFFFF;
+}
+
+.minitask_prio {
+    width: 17px;
+    height: 12px;
 }
