--- a/assets/css/models.css
+++ b/assets/css/models.css
@@ -43,6 +43,13 @@
     align-items: flex-start;
 }
 
+.row-center-flexend {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-end;
+}
+
 .row-center-center {
     display: flex;
     flex-direction: row;
@@ -55,6 +62,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.column_flexend_center {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center
 }
 
 .row-spacebet-center {
@@ -105,4 +119,16 @@
     width: 100%;
     height: 100vh;
     position: absolute;
+}
+
+.slide-right {
+    transform: translateX(0%) !important;
+    transition-duration: 0.3s;
+    animation-name: slide-right;
+}
+
+.slide-left {
+    transform: translateX(-110%) !important;
+    transition-duration: 0.3s;
+    animation-name: slide-left;
 }
