--- a/assets/templates/menu.html
+++ b/assets/templates/menu.html
@@ -22,7 +22,7 @@
 <body>
     <div class="menu_principal column-center menu_large">
         <div class="menu_links column-center-flexstart">
-            <div class="menu_all summary_background row-center" onclick="openSummary()">
+            <div class="menu_all summary_background row-center" onclick="openSummary()" id="summary">
                 <img class="icon_summary" src="assets/img/iconSummary.svg">
                 <a class="text_menu font400">Summary</a>
             </div>
