--- a/assets/templates/editContactPopUp.html
+++ b/assets/templates/editContactPopUp.html
@@ -24,7 +24,7 @@
 <body>
     <div id="editContactPopUp">
         <div class="newContact_popUp_container" id="editContactPop">
-            <div class="newContact_popUp_cont column-center">
+            <form class="newContact_popUp_cont column-center" onsubmit="editContact(); return false">
                 <div class="new_contact_top column-center">
                     <img src="assets/img/crossWhite.svg" class="new_contact_close" onclick="closeEditContact()">
                     <img src="assets/img/JoinWhite.svg" class="new_contact_logo">
@@ -62,13 +62,13 @@
                             <a class="new_contact_required d-none" id="editFieldRequiredPhone">This field is required</a>
                         </div>
                     </div>
-                    <form class="new_contact_bottom3 row-center-center" onsubmit="editContact(); return false">
+                    <div class="new_contact_bottom3 row-center-center">
                         <button class="edit_contact_botton_create row-center-center">
                             <a class="new_contact_button font400">Save</a>
                         </button>
-                    </form>
+                    </div>
                 </div>
-            </div>
+            </form>
         </div>
     </div>
 </body>
