--- a/assets/templates/newContactPopUp.html
+++ b/assets/templates/newContactPopUp.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <div id="newContactPopUp">
+    <div id="newContactPopUp" class="new_contact_pop_ups">
         <div class="newContact_popUp_container" id="newContactPop">
             <div class="newContact_popUp_cont column-center">
                 <div class="new_contact_top column-center">
@@ -31,7 +31,7 @@
                     <a class="new_contact_title font400">Add contact</a>
                     <a class="new_contact_subtitle font400">Tasks are better with a team!</a>
                 </div>
-                <div class="new_contact_bottom column-center">
+                <form class="new_contact_bottom column-center" onsubmit="createNewContact(); return false">
                     <div class="new_contact_bottom1">
                         <div class="new_contact_circle row-center-center">
                             <img src="assets/img/userGrau.svg" class="new_contact_circle_user">
@@ -64,7 +64,7 @@
                         </div>
                     </div>
                     <div class="new_contact_bottom3 column_flexend_center">
-                        <form class="new_contact_bottons row-center-center" onsubmit="createNewContact(); return false">
+                        <div class="new_contact_bottons row-center-center">
                             <button class="new_contact_botton_cancel row-center-center" onclick="cancelNewContact()">
                                 <a class="new_contact_cancel font400">Cancel X</a>
                             </button>
@@ -72,10 +72,13 @@
                                 <a class="new_contact_button font400">Create contact</a>
                                 <img src="assets/img/checkCreateT.svg">
                             </button>
-                        </form>
+                        </div>
                     </div>
-                </div>
+                </form>
             </div>
+        </div>
+        <div class="pop_up_contact_created row-center-center d-none" id="contactCreated">
+            <a class="pop_up_contact_created_text font400">Contact succesfully created</a>
         </div>
     </div>
 </body>
