--- a/assets/templates/editContactPopUp.html
+++ b/assets/templates/editContactPopUp.html
@@ -24,7 +24,7 @@
 <body>
     <div id="editContactPopUp">
         <div class="newContact_popUp_container" id="editContactPop">
-            <form class="newContact_popUp_cont column-center" onsubmit="editContact(); return false">
+            <form class="newContact_popUp_cont column-center" onsubmit="saveEditContact(); return false">
                 <div class="new_contact_top column-center">
                     <img src="assets/img/crossWhite.svg" class="new_contact_close" onclick="closeEditContact()">
                     <img src="assets/img/JoinWhite.svg" class="new_contact_logo">
