--- a/assets/templates/newContactPopUp.html
+++ b/assets/templates/newContactPopUp.html
@@ -44,7 +44,7 @@
                                     placeholder="Name" id="newContactName">
                                 <img src="assets/img/userSmall.svg">
                             </div>
-                            <a class="new_contact_required d-none" id="newFieldRequiredName">This field is required</a>
+                            <a class="new_contact_required d-none" id="newFieldRequiredName" pattern="[A-Za-z]+\s[A-Za-z]+">This field is required</a>
                         </div>
                         <div class="new_contact_info_user column-flex-start">
                             <div class="new_contact_info row-center">
