--- a/assets/css/miniPopups.css
+++ b/assets/css/miniPopups.css
@@ -85,13 +85,14 @@
 .add_task_popUp_container {
     z-index: 9;
     position: absolute;
-    right: -600px;
+    right: 0;
     width: 518px;
     height: 950px;
     overflow-y: scroll;
     background: #FFFFFF;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.16);
     border-radius: 30px 0px 30px 30px;
+    transform: translateX(110%);
 }
 
 .add_task_popUp_cont {
@@ -99,7 +100,7 @@
     left: 36px;
     gap: 20px;
     position: absolute;
-    width: 561px;
+    width: 480px;
     height: 890px;
 }
 
