--- a/assets/templates/addTaskPopUp.html
+++ b/assets/templates/addTaskPopUp.html
@@ -34,8 +34,9 @@
                 </div>
                 <div class="add_task_title column-flex-start">
                     <div class="add_task_title_cont row-center">
-                        <input class="add_task_input font400" placeholder="Enter a title" required></input>
+                        <input class="add_task_input font400" placeholder="Enter a title" required id="inputTitleTask"></input>
                     </div>
+                    <a class="field_required d-none">This field is required</a>
                 </div>
                 <div class="add_task_contacts_cont column-flex-start"  id="assignedContactcont">
                     <div class="add_task_contacts column-flex-start">
@@ -68,17 +69,52 @@
                 <div class="add_task_dueDate_cont column-flex-start">
                     <a class="add_task_titles font400">Due date</a>
                     <div class="add_task_Duedate_input row-center">
-                        <input class="Duedate_input font400" placeholder="dd/mm/yyyy" type="text"
+                        <input class="Duedate_input font400" placeholder="dd/mm/yyyy" type="date"
                             id="inputCalendarAddTask" required>
-                        <img src="assets/img/calendarAddTask.svg" class="dueDate_img" id="imgCalendarAddTask">
                     </div>
+                    <a class="field_required d-none">This field is required</a>
                 </div>
-                <div class="add_task_category_cont column-flex-start">
-                    <a class="add_task_titles font400">Category</a>
+                <div class="add_task_category_cont column-flex-start" id="selecCategoryCont">
                     <div class="add_task_select_cat column-flex-start">
-                        <div class="add_task_selectCat row-center">
+                        <div class="add_task_selectCat row-center" onclick="expandCategory()" id="selecCategory">
                             <a class="add_task_subtitle font400">Select task category</a>
                             <img src="assets/img/contactsArrow.svg" class="add_task_contacts_arrow">
+                        </div>
+                        <div class="category_hidden_cont column-flex-start d-none" id="categoryList"
+                            onclick="createdNewCategory()">
+                            <div class="contacts_choose_cont row-center" onclick="">
+                                <a class="add_task_subtitle font400">New category</a>
+                            </div>
+                            <div class="contacts_choose_cont row-center">
+                                <a class="add_task_subtitle font400">Sales</a>
+                                <span class="category_circle_color color_sales"></span>
+                            </div>
+                            <div class="contacts_choose_cont row-center">
+                                <a class="add_task_subtitle font400">Backoffice</a>
+                                <span class="category_circle_color color_backoffice"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="new_contact_container column-flex-start d-none" id="newCategoryCont">
+                    <div class="new_contact_cont row-center">
+                        <input class="new_contact_input row-center font400" id="addTaskNewCategory"
+                            placeholder="New category name"></input>
+    
+                        <div class="new_contact_input_icons row-center-center">
+                            <img src="assets/img/cancelBlue.svg" onclick="cancelNewCategory()">
+                            <img src="assets/img/grauLineSmall.svg">
+                            <img src="assets/img/blueCheck.svg">
+                        </div>
+                    </div>
+                    <div class="new_category_colors row-center">
+                        <div class="new_category_select_color row-center">
+                            <span class="new_category_circle" style="background: #8AA4FF"></span>
+                            <span class="new_category_circle" style="background: #FF0000"></span>
+                            <span class="new_category_circle" style="background: #2AD300"></span>
+                            <span class="new_category_circle" style="background: #FF8A00"></span>
+                            <span class="new_category_circle" style="background: #E200BE"></span>
+                            <span class="new_category_circle" style="background: #0038FF"></span>
                         </div>
                     </div>
                 </div>
@@ -99,12 +135,13 @@
                 <div class="add_task_description_cont column-flex-start">
                     <a class="add_task_titles font400">Description</a>
                     <textarea class="add_task_descript_input row-flexstart font400" required
-                        placeholder="Enter a Description"></textarea>
+                        placeholder="Enter a Description" id="addTaskDescription"></textarea>
+                        <a class="field_required d-none">This field is required</a>
                 </div>
                 <div class="add_task_subtasks_cont column-flex-start">
                     <a class="add_task_titles font400">Subtasks</a>
                     <div class="subtasks_cont_input_img row-center">
-                        <input class="add_task_subtasks_input row-center font400" placeholder="Add new subtask">
+                        <input class="add_task_subtasks_input row-center font400" placeholder="Add new subtask" id="addTaskSubTask">
                         <img src="assets/img/plusBlue.svg" class="plus_blue_img">
                     </div>
                     <div class="subtasks_cont_check row-center-center">
