--- a/assets/css/addTask.css
+++ b/assets/css/addTask.css
@@ -418,6 +418,11 @@ body {
     color: #000000;
 }
 
+.subTaskContainer {
+    gap: 5px;
+    width: 300px;
+}
+
 /*Add Task buttons bottom*/
 .add_task_buttons_bottom {
     gap: 25px;
