--- a/assets/css/addTask.css
+++ b/assets/css/addTask.css
@@ -284,7 +284,7 @@ body {
     cursor: pointer;
 }
 
-.new_category_circle:hover {
+.new_category_circle:focus {
     border-radius: 50%;
     border: 2px solid #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
